--- a/src/renderer/ListQuizzes/renderer.html
+++ b/src/renderer/ListQuizzes/renderer.html
@@ -6,16 +6,22 @@
   <link rel="stylesheet" href="../../styles.css">
 </head>
 <body>
-  <h1>Lista de Questões</h1>
-  <ul id="quizzes-list"></ul>
-  <button id="prev-btn" onclick="prevPage()">Anterior</button>
-  <button id="next-btn" onclick="nextPage()">Próximo</button>
-  <select id="limit-select" onchange="changeLimit()">
-    <option value="5" selected>5</option>
-    <option value="10">10</option>
-    <option value="20">20</option>
-    <option value="50">50</option>
-  </select>
+  <div id="root">
+    <div class="container">
+      <h1>Lista de Questões</h1>
+      <ul id="quizzes-list"></ul>
+      <div>
+        <button id="prev-btn" class="secondary" onclick="prevPage()">Anterior</button>
+        <button id="next-btn" class="secondary" onclick="nextPage()">Próximo</button>
+      </div>
+      <select id="limit-select" onchange="changeLimit()">
+        <option value="5" selected>5</option>
+        <option value="10">10</option>
+        <option value="20">20</option>
+        <option value="50">50</option>
+      </select>
+    </div>
+  </div>
   <script src="./renderer.js"></script>
 </body>
 
