--- a/src/renderer/Login/renderer.html
+++ b/src/renderer/Login/renderer.html
@@ -5,15 +5,13 @@
   <link rel="stylesheet" href="../../styles.css">
 </head>
 <body>
-  <div id="root">
-    <div class="login-container">
-      <h1>Bem vindo ao formulário da Ancar</h1>
-      <form>
-        <input type="text" placeholder="Username" id="username" class="form-control" />
-        <input type="password" placeholder="Password" id="password" class="form-control" />
-        <button type="button" onclick="handleLogin()" class="btn btn-primary btn-block">Login</button>
-      </form>
-    </div>
+  <div class="container">
+    <h1>Bem vindo ao formulário da Ancar</h1>
+    <form>
+      <input type="text" placeholder="CPF" id="username" class="form-control" />
+      <input type="password" placeholder="Password" id="password" class="form-control" />
+      <button type="button" onclick="handleLogin()" class="btn btn-primary btn-block">Login</button>
+    </form>
   </div>
   <script src="./renderer.js"></script>
 </body>
